HelloUltraviolet/Fixtures/RejectedSource/Statements/FrameDiagnostic/Source/Main.uv
//! Rejected statement specimen for frame diagnostic coverage.

public procedure frameDiagnosticReference() -> () {
    frame {
    }
}
